fixed alignment and margins of global buttons to match designs

--- a/app/common/styles/elements/export.scss
+++ b/app/common/styles/elements/export.scss
@@ -20,5 +20,5 @@
   transform: rotate(90deg);
   display: inline-block;
   left: 2px;
-  top: -5px;
+  top: -7px;
 }
